--- a/Earthquakes_past7days/index.html
+++ b/Earthquakes_past7days/index.html
@@ -32,7 +32,7 @@ crossorigin=""></script>
 //path to the JavaScript cities.js file
 <script type="text/javascript" src="static/js/cities.js"></script>
 <!-- Our JavaScript -->
-<script type="text/javascript" src="static/js/logic.js"></script>
+<script type="text/javascript" src="static/js/logicStep1.js"></script>
 
 </body>
 </html>
